service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: simple-app
  name: simple-service
  namespace: demo
spec:
  ports:
  - nodePort: 31230
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: simple-app
  type: NodePort
